--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -10,83 +10,92 @@
 			<h1>Game</h1>
 			<p>Welcome to the game!</p>
 		</header>
-	
+
 		<hr>
-		
+
 		<main>
 			<div id="login">
 				<p>Please, log in to play the game.</p>
 				<button onclick="start42Login()">Log in with 42</button>
 				<p>---or---</p>
-				<form id="loginForm" method="POST" onsubmit=handleLogin(event)>
+				<form id="loginForm" method="POST" onsubmit="handleLogin(event)">
 					<div>
 						<label for="email">Enter your email:</label>
 						<input type="email"
-								id="email"
-								placeholder="username@email.com"
-								required
-								pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-								title="username@email.com">
+							   id="email"
+							   placeholder="username@email.com"
+							   required
+							   pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+							   title="username@email.com">
 					</div>
 					<div>
 						<label for="password">Enter your password:</label>
 						<input type="password"
-								id="password"
-								placeholder="********"
-								required>
+							   id="password"
+							   placeholder="********"
+							   required>
 					</div>
 					<button type="submit">Log in</button>
 				</form>
 				<p id="loginResult"></p>
 				<div>
 					<p style="display: inline;">Don't have an account?</p>
-					<button style="display: inline;" onclick=startAccountCreation()>Create account</button>
+					<button style="display: inline;" onclick="startAccountCreation()">Create account</button>
 				</div>
 			</div>
-				
+
 			<div id="accountCreation" hidden>
 				<p>Please, create your account to play the game.</p>
-				<button  onclick="start42Login()">Sign up with 42</button>
+				<button onclick="start42Login()">Sign up with 42</button>
 				<p>---or---</p>
-				<form id="accountCreationForm" method="POST" onsubmit=handleAccountCreation(event)>
+				<form id="accountCreationForm" method="POST" onsubmit="handleAccountCreation(event)">
 					<div>
 						<label for="newEmail">Enter your email:</label>
 						<input type="email"
-								id="newEmail"
-								placeholder="username@email.com"
-								required
-								pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-								title="username@email.com">
+							   id="newEmail"
+							   placeholder="username@email.com"
+							   required
+							   pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+							   title="username@email.com">
 					</div>
 					<div>
 						<label for="newPassword">Enter your password:</label>
-						<input  type="password"
-								id="newPassword"
-								placeholder="********"
-								required>
+						<input type="password"
+							   id="newPassword"
+							   placeholder="********"
+							   required>
 					</div>
 					<button type="submit">Create account</button>
 				</form>
 				<p id="accountCreationResult"></p>
 				<div>
 					<p style="display: inline;">Already have an account?</p>
-					<button style="display: inline;" onclick=startLogin()>Log in</button>
+					<button style="display: inline;" onclick="startLogin()">Log in</button>
 				</div>
 			</div>
-			
+
 			<div id="userProfile" hidden>
 				<p>You have just successfully logged in to your account!</p>
-				<button onclick=logOut()>Log out</button>
+				<button onclick="logOut()">Log out</button>
 			</div>
 
+			<hr>
+
+			<!-- WebSocket Chat -->
+			<section id="chat">
+				<h2>Live Chat</h2>
+				<div id="chat-log" style="height: 200px; overflow-y: scroll; border: 1px solid #ccc; padding: 10px;"></div>
+				<input id="chat-message-input" type="text" placeholder="Type a message...">
+				<button id="send">Send</button>
+			</section>
 
 			<hr>
 
 			<canvas id="canvas" width="500" height="300"></canvas>
 		</main>
-	
+
 		<hr>
-	
+
 		<footer>
 			<p>© 2025 All rights reserved</p>
 		</footer>
@@ -94,72 +103,58 @@
 		<script>
 			const users = [];
 
-			function handleLogin(event)
-			{
+			function handleLogin(event) {
 				event.preventDefault();
 
 				const email = document.getElementById("email").value;
 				const password = document.getElementById("password").value;
 
-				if (users.find(user => user.email === email))
-				{
-					if (password === users.find(user => user.email === email).password)
-					{
+				const user = users.find(u => u.email === email);
+
+				if (user) {
+					if (password === user.password) {
 						document.getElementById("email").blur();
 						document.getElementById("password").blur();
 						document.getElementById("email").value = "";
 						document.getElementById("password").value = "";
 						document.getElementById("loginResult").innerHTML = "";
 						openUserProfile();
-					}
-					else
-					{
-						document.getElementById("loginResult").innerHTML = 
-							`Wrong password!`;
+					} else {
+						document.getElementById("loginResult").innerHTML = "Wrong password!";
 						document.getElementById("loginResult").hidden = false;
 						document.getElementById("password").value = "";
 						document.getElementById("password").focus();
 					}
-				}
-				else
-				{
-					document.getElementById("loginResult").innerHTML = 
-						`User with email ${email} not found`;
+				} else {
+					document.getElementById("loginResult").innerHTML = `User with email ${email} not found`;
 					document.getElementById("loginResult").hidden = false;
 					document.getElementById("email").focus();
 				}
 			}
 
-			function handleAccountCreation(event)
-			{
+			function handleAccountCreation(event) {
 				event.preventDefault();
 
 				const email = document.getElementById("newEmail").value;
 				const password = document.getElementById("newPassword").value;
 
-				if (users.find(user => user.email === email))
-				{
-					document.getElementById("accountCreationResult").innerHTML = 
-						`User with email ${email} already exists`;
+				if (users.find(user => user.email === email)) {
+					document.getElementById("accountCreationResult").innerHTML = `User with email ${email} already exists`;
 					document.getElementById("accountCreationResult").hidden = false;
 					document.getElementById("newEmail").focus();
-				}
-				else
-				{
-					users.push({email, password});
+				} else {
+					users.push({ email, password });
 					document.getElementById("newEmail").blur();
 					document.getElementById("newPassword").blur();
 					document.getElementById("newEmail").value = "";
 					document.getElementById("newPassword").value = "";
 					document.getElementById("accountCreationForm").hidden = true;
-					document.getElementById("accountCreationResult").innerHTML = 
-						`You have just successfully created your account!`;
-					document.getElementById("accountCreationResultResult").hidden = false;
+					document.getElementById("accountCreationResult").innerHTML = `You have just successfully created your account!`;
+					document.getElementById("accountCreationResult").hidden = false;
 				}
 			}
 
-			function startAccountCreation()
-			{
+			function startAccountCreation() {
 				document.getElementById("email").value = "";
 				document.getElementById("password").value = "";
 				document.getElementById("loginResult").innerHTML = "";
@@ -167,40 +162,37 @@
 				document.getElementById("accountCreation").hidden = false;
 				document.getElementById("accountCreationForm").hidden = false;
 			}
-			
-			function startLogin()
-			{
+
+			function startLogin() {
 				document.getElementById("login").hidden = false;
 				document.getElementById("newEmail").value = "";
 				document.getElementById("newPassword").value = "";
 				document.getElementById("accountCreationResult").innerHTML = "";
 				document.getElementById("accountCreation").hidden = true;
 			}
-			
-			function openUserProfile()
-			{
+
+			function openUserProfile() {
 				document.getElementById("login").hidden = true;
 				document.getElementById("accountCreation").hidden = true;
 				document.getElementById("userProfile").hidden = false;
 			}
 
-			function logOut()
-			{
+			function logOut() {
 				document.getElementById("login").hidden = false;
 				document.getElementById("accountCreation").hidden = true;
 				document.getElementById("userProfile").hidden = true;
 			}
 
-			function start42Login()
-			{
-				window.location.href = "https://api.intra.42.fr/oauth/authorize?client_id=u-s4t2ud-42af5be9c50086986d493929592fbd7d5a7cd21427155bad5eb264883602b20a&redirect_uri=https://localhost/api/auth/ft/callback/&response_type=code"
+			function start42Login() {
+				window.location.href = "https://api.intra.42.fr/oauth/authorize?client_id=u-s4t2ud-42af5be9c50086986d493929592fbd7d5a7cd21427155bad5eb264883602b20a&redirect_uri=https://localhost/api/auth/ft/callback/&response_type=code";
 			}
 
 			const canvas = document.getElementById("canvas");
-			canvas.width = 500;
-			canvas.height = 300;
 			const ctx = canvas.getContext("2d");
 			ctx.strokeRect(0, 0, canvas.width, canvas.height);
 		</script>
+
+		<script src="chat.js"></script>
 	</body>
 </html>
+
