--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Game</title>
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>transCendenZ</title>
+		<link rel="icon" href="favicon.gif?v=2" type="image/gif"/>
+		<script src="profile.js" defer></script>
+		<script src="pong.js" defer></script>
 	</head>
 	<body>
 		<header>
-			<h1>Game</h1>
+			<h1>Pong Game</h1>
 			<p>Welcome to the game!</p>
 		</header>
 	
 		<hr>
 		
 		<main>
-			<div id="login">
+			<noscript>
+			<p>Sorry, this website requires JavaScript to function. Please enable JavaScript in your browser settings to continue.</p>
+			</noscript>
+
+			<div id="login" hidden>
 				<p>Please, log in to play the game.</p>
-				<button onclick="start42Login()">Log in with 42</button>
+				<button onclick=loginWith42(event)>Log in with GMail</button>
 				<p>---or---</p>
 				<form id="loginForm" method="POST" onsubmit=handleLogin(event)>
 					<div>
-						<label for="email">Enter your email:</label>
-						<input type="email"
-								id="email"
-								placeholder="username@email.com"
-								required
-								pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-								title="username@email.com">
+						<label for="newUsername">Enter your username:</label>
+						<input  type="username"
+								id="username"
+								placeholder="username"
+								minlength="3"
+								maxlength="20"
+								pattern="[a-zA-Z0-9_]+"
+								title="Username can only contain letters, numbers, and underscores, and must be 3-20 characters long."
+								required/>
 					</div>
 					<div>
 						<label for="password">Enter your password:</label>
 						<input type="password"
 								id="password"
 								placeholder="********"
-								required>
+								required/>
 					</div>
 					<button type="submit">Log in</button>
 				</form>
@@ -45,25 +54,40 @@
 			</div>
 				
 			<div id="accountCreation" hidden>
-				<p>Please, create your account to play the game.</p>
-				<button  onclick="start42Login()">Sign up with 42</button>
-				<p>---or---</p>
+				<div id="accountCreationHeader">
+					<p>Please, create your account to play the game.</p>
+					<button onclick=signUpWith42(event)>Sign up with GMail</button>
+					<p>---or---</p>
+				</div>
 				<form id="accountCreationForm" method="POST" onsubmit=handleAccountCreation(event)>
+					<div>
+						<label for="newUsername">Enter your username:</label>
+						<input  type="username"
+								id="newUsername"
+								placeholder="username"
+								minlength="3"
+								maxlength="20"
+								pattern="[a-zA-Z0-9_]+"
+								title="Username can only contain letters, numbers, and underscores, and must be 3-20 characters long."
+								required/>
+					</div>
 					<div>
 						<label for="newEmail">Enter your email:</label>
 						<input type="email"
 								id="newEmail"
 								placeholder="username@email.com"
 								required
-								pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-								title="username@email.com">
+								pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+								title="user@email.com"/>
 					</div>
 					<div>
 						<label for="newPassword">Enter your password:</label>
 						<input  type="password"
 								id="newPassword"
 								placeholder="********"
-								required>
+								minlength="8"
+								pattern="^(?!\d+$).*$"
+								required/>
 					</div>
 					<button type="submit">Create account</button>
 				</form>
@@ -76,13 +100,18 @@
 			
 			<div id="userProfile" hidden>
 				<p>You have just successfully logged in to your account!</p>
+				<p id="profileInformation"></p>
+				<button onclick=startGame()>Play Pong</button>
 				<button onclick=logOut()>Log out</button>
 			</div>
 
+			<div id="game" hidden>
+    			<h1>Pong Game 1v1</h1>
+    			<canvas id="pongCanvas" width="600" height="400"></canvas>
+  				<p>Use W and S for Player 1 (left) and Arrow keys for Player 2 (right)</p>
+				<button onclick=endGame()>End game</button>
+			</div>
 
-			<hr>
-
-			<canvas id="canvas" width="500" height="300"></canvas>
 		</main>
 	
 		<hr>
@@ -90,117 +119,5 @@
 		<footer>
 			<p>© 2025 All rights reserved</p>
 		</footer>
-
-		<script>
-			const users = [];
-
-			function handleLogin(event)
-			{
-				event.preventDefault();
-
-				const email = document.getElementById("email").value;
-				const password = document.getElementById("password").value;
-
-				if (users.find(user => user.email === email))
-				{
-					if (password === users.find(user => user.email === email).password)
-					{
-						document.getElementById("email").blur();
-						document.getElementById("password").blur();
-						document.getElementById("email").value = "";
-						document.getElementById("password").value = "";
-						document.getElementById("loginResult").innerHTML = "";
-						openUserProfile();
-					}
-					else
-					{
-						document.getElementById("loginResult").innerHTML = 
-							`Wrong password!`;
-						document.getElementById("loginResult").hidden = false;
-						document.getElementById("password").value = "";
-						document.getElementById("password").focus();
-					}
-				}
-				else
-				{
-					document.getElementById("loginResult").innerHTML = 
-						`User with email ${email} not found`;
-					document.getElementById("loginResult").hidden = false;
-					document.getElementById("email").focus();
-				}
-			}
-
-			function handleAccountCreation(event)
-			{
-				event.preventDefault();
-
-				const email = document.getElementById("newEmail").value;
-				const password = document.getElementById("newPassword").value;
-
-				if (users.find(user => user.email === email))
-				{
-					document.getElementById("accountCreationResult").innerHTML = 
-						`User with email ${email} already exists`;
-					document.getElementById("accountCreationResult").hidden = false;
-					document.getElementById("newEmail").focus();
-				}
-				else
-				{
-					users.push({email, password});
-					document.getElementById("newEmail").blur();
-					document.getElementById("newPassword").blur();
-					document.getElementById("newEmail").value = "";
-					document.getElementById("newPassword").value = "";
-					document.getElementById("accountCreationForm").hidden = true;
-					document.getElementById("accountCreationResult").innerHTML = 
-						`You have just successfully created your account!`;
-					document.getElementById("accountCreationResultResult").hidden = false;
-				}
-			}
-
-			function startAccountCreation()
-			{
-				document.getElementById("email").value = "";
-				document.getElementById("password").value = "";
-				document.getElementById("loginResult").innerHTML = "";
-				document.getElementById("login").hidden = true;
-				document.getElementById("accountCreation").hidden = false;
-				document.getElementById("accountCreationForm").hidden = false;
-			}
-			
-			function startLogin()
-			{
-				document.getElementById("login").hidden = false;
-				document.getElementById("newEmail").value = "";
-				document.getElementById("newPassword").value = "";
-				document.getElementById("accountCreationResult").innerHTML = "";
-				document.getElementById("accountCreation").hidden = true;
-			}
-			
-			function openUserProfile()
-			{
-				document.getElementById("login").hidden = true;
-				document.getElementById("accountCreation").hidden = true;
-				document.getElementById("userProfile").hidden = false;
-			}
-
-			function logOut()
-			{
-				document.getElementById("login").hidden = false;
-				document.getElementById("accountCreation").hidden = true;
-				document.getElementById("userProfile").hidden = true;
-			}
-
-			function start42Login()
-			{
-				window.location.href = "https://api.intra.42.fr/oauth/authorize?client_id=u-s4t2ud-42af5be9c50086986d493929592fbd7d5a7cd21427155bad5eb264883602b20a&redirect_uri=https://localhost/api/auth/ft/callback/&response_type=code"
-			}
-
-			const canvas = document.getElementById("canvas");
-			canvas.width = 500;
-			canvas.height = 300;
-			const ctx = canvas.getContext("2d");
-			ctx.strokeRect(0, 0, canvas.width, canvas.height);
-		</script>
 	</body>
 </html>
