--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -23,7 +23,7 @@
 
 			<div id="login" hidden>
 				<p>Please, log in to play the game.</p>
-				<button onclick=loginWith42(event)>Log in with GMail</button>
+				<button onclick=loginWith42(event)>Log in with 42</button>
 				<p>---or---</p>
 				<form id="loginForm" method="POST" onsubmit=handleLogin(event)>
 					<div>
