django is working, not the WS

--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -217,7 +217,7 @@
 				window.location.href = "https://api.intra.42.fr/oauth/authorize?client_id=u-s4t2ud-42af5be9c50086986d493929592fbd7d5a7cd21427155bad5eb264883602b20a&redirect_uri=https://localhost/api/auth/ft/callback/&response_type=code";
 			}
 
-			const canvas = document.getElementById("canvas");
+			const canvas = document.getElementById("pongCanvas");
 			const ctx = canvas.getContext("2d");
 			ctx.strokeRect(0, 0, canvas.width, canvas.height);
 		</script>
