--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -9,14 +9,22 @@
 		<script src="pong.js" defer></script>
 		<script src="pages.js" defer></script>
 		<script src="navigate.js" defer></script>
+
+		<!-- bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+		<!-- retro-futur -->
+		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+
 	</head>
-	<body>
+	<body class="d-flex flex-column min-vh-100">
 		<header>
 			<h1>Pong Game</h1>
 			<p>Welcome to the game!</p>
 		</header>
 		<hr>
-		<main>
+		<main class="flex-grow-1">
 			<noscript>
 			<p>Sorry, this website requires JavaScript to function. 
 			Please enable JavaScript in your browser settings to continue.</p>
@@ -24,7 +32,7 @@
 			<div id="app"></div>
 		</main>
 		<hr>
-		<footer>
+		<footer class="mt-auto">
 			<p>© 2025 All rights reserved</p>
 		</footer>
 	</body>
