--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -34,10 +34,22 @@
 		<hr>
 		<section id="chat">
 			<h2>Live Chat</h2>
+		
+			<div class="mb-2">
+				<input id="room-name" type="text" placeholder="Enter room name" class="form-control d-inline w-auto" />
+				<button id="join-room" class="btn btn-primary btn-sm">Join Room</button>
+			</div>
+		
+			<p id="current-room" class="text-muted">
+				🟢 Room: <span id="current-room-name">general</span>
+			</p>
+		
 			<div id="chat-log" style="height: 200px; overflow-y: scroll; border: 1px solid #ccc; padding: 10px;"></div>
 			<input id="chat-message-input" type="text" placeholder="Type a message...">
 			<button id="send">Send</button>
 		</section>
+		
+		
 		<script src="chat.js"></script>
 		<footer class="mt-auto">
 			<p>© 2025 All rights reserved</p>
