imparfait mais chat sur la page d accueil

--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -22,6 +22,10 @@
 		<header>
 			<h1>Pong Game</h1>
 			<p>Welcome to the game!</p>
+			<div id="user-info" class="text-end" style="display: none;">
+				<span id="logged-user" class="me-2 fw-bold text-success"></span>
+				<button onclick="handleLogout()" class="btn btn-sm btn-outline-danger">Logout</button>
+			</div>	
 		</header>
 		<hr>
 		<main class="flex-grow-1">
