--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -24,8 +24,7 @@
 			<p>Welcome to the game!</p>
 			<div id="user-info" class="text-end" style="display: none;">
 				<span id="logged-user" class="me-2 fw-bold text-success"></span>
-				<button onclick="handleLogout()" class="btn btn-sm btn-outline-danger">Logout</button>
-			</div>	
+			</div>			
 		</header>
 		<hr>
 		<main class="flex-grow-1">
@@ -37,23 +36,25 @@
 		</main>
 		<hr>
 		<section id="chat">
+	<!--          chat            -->
+	<div id="chat-section" style="display: none;">
+		<section id="chat">
 			<h2>Live Chat</h2>
-		
+
 			<div class="mb-2">
 				<input id="room-name" type="text" placeholder="Enter room name" class="form-control d-inline w-auto" />
 				<button id="join-room" class="btn btn-primary btn-sm">Join Room</button>
 			</div>
-		
+
 			<p id="current-room" class="text-muted">
 				🟢 Room: <span id="current-room-name">general</span>
 			</p>
-		
+
 			<div id="chat-log" style="height: 200px; overflow-y: scroll; border: 1px solid #ccc; padding: 10px;"></div>
 			<input id="chat-message-input" type="text" placeholder="Type a message...">
 			<button id="send">Send</button>
 		</section>
-		
-		
+	</div>	
 		<script src="chat.js"></script>
 		<footer class="mt-auto">
 			<p>© 2025 All rights reserved</p>
