last commit auth clean

--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -46,7 +46,7 @@
 				<button id="join-room" class="btn btn-primary btn-sm">Join Room</button>
 			</div>
 
-			<p id="current-room" class="text-muted">
+			<p id="current-room" class="fw-bold text-info">
 				🟢 Room: <span id="current-room-name">general</span>
 			</p>
 
