PADDLE2.POSITION FIXED

--- a/srcs/frontend/trans/pong_test.html
+++ b/srcs/frontend/trans/pong_test.html
@@ -132,7 +132,7 @@
 
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        paddle2.x = canvas.width - paddleWidth - 10;
+        paddle2.x = canvas.width - paddleWidth;
 
         ctx.fillStyle = "#000";
         ctx.fillRect(paddle1.x, paddle1.y, paddle1.width, paddle1.height);
