--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -49,7 +49,9 @@
 			<p id="current-room" class="fw-bold text-info">
 				🟢 Room: <span id="current-room-name">general</span>
 			</p>
-
+			<div id="chat-tabs" class="nav nav-tabs mb-3">
+				<!-- Onglets ajoutés dynamiquement ici -->
+			  </div>			  
 			<div id="chat-log" style="height: 200px; overflow-y: scroll; border: 1px solid #ccc; padding: 10px;"></div>
 			<input id="chat-message-input" type="text" placeholder="Type a message...">
 			<button id="send">Send</button>
