add direct messages WIP
attention :
- un troisieme user peut essayer de se connecter a la room dm
- la fenetre du user dm'ed ne souvre pas

--- a/srcs/frontend/trans/index.html
+++ b/srcs/frontend/trans/index.html
@@ -45,7 +45,8 @@
 				<input id="room-name" type="text" placeholder="Enter room name" class="form-control d-inline w-auto" />
 				<button id="join-room" class="btn btn-primary btn-sm">Join Room</button>
 			</div>
-
+			<input type="text" id="dm-username" placeholder="Username for DM">
+			<button id="start-dm">Start DM</button>			
 			<p id="current-room" class="fw-bold text-info">
 				🟢 Room: <span id="current-room-name">general</span>
 			</p>
