adding curve paddles and movement

--- a/srcs/frontend/trans/mushpit.html
+++ b/srcs/frontend/trans/mushpit.html
@@ -10,6 +10,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	
+	<script src="mushpit.js" defer></script>
+
 	<style>
 		.container
 		{
@@ -26,11 +28,11 @@
             border: 5px solid #fff;
 		}
 	</style>
+
 </head>
 <body>
 	<div class="container">
-		<canvas id="pongCanvas" width="600" height="600"></canvas>
+		<canvas id="mushpitCanvas" width="600" height="600"></canvas>
 	</div>
-
-
+	
 </body>
