pushing to dev branch

--- a/srcs/frontend/trans/moshpit.html
+++ b/srcs/frontend/trans/moshpit.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	
-	<script src="mushpit.js" defer></script>
+	<script src="moshpit.js" defer></script>
 
 	<style>
 		.container
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<div class="container">
-		<canvas id="mushpitCanvas" width="600" height="600"></canvas>
+		<canvas id="moshpitCanvas" width="600" height="600"></canvas>
 	</div>
 	
 </body>
