--- a/srcs/frontend/trans/moshpitRemote.html
+++ b/srcs/frontend/trans/moshpitRemote.html
@@ -33,6 +33,7 @@
 <body>
 	<div class="container">
 		<canvas id="moshpitRemoteCanvas" width="600" height="600"></canvas>
+		<div id="countdown-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); color:white; text-align:center; padding-top:100px; z-index:9999;"></div>
 	</div>
 	
 </body>
