--- a/srcs/frontend/trans/moshpitRemote.html
+++ b/srcs/frontend/trans/moshpitRemote.html
@@ -31,9 +31,9 @@
 
 </head>
 <body>
-	<div class="container">
+	<div class="container  d-flex justify-content-center align-items-center" style="min-height: 100vh; flex-direction: column;">
 		<canvas id="moshpitRemoteCanvas" width="600" height="600"></canvas>
-		<div id="countdown-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); color:white; text-align:center; padding-top:100px; z-index:9999;"></div>
+		<!-- <div id="countdown-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); color:white; text-align:center; padding-top:100px; z-index:9999;"></div> -->
 	</div>
 	
 </body>
